# praesagus

./: .dockerignore  AGENT.md  Dockerfile  Makefile  README.md  docker-compose.ingest.yml  docker-compose.user.yml  docker-compose.yml  prompt.md  pyproject.toml  requirements.txt
.prompts/: audit.md
alerting/: alert_engine.py
backend/: main.py  models.py  services.py
connectors/: __init__.py  airtable.py  base.py  connector_registry.py  connector_runner.py  edgar.py  feature_store.py  github.py  google_trends.py  hackernews.py  instagram.py  multi_runner.py  news_rss.py  reddit.py  reddit_run.py  stack_overflow.py  threads.py  tiktok.py  twitter.py  twitter_run.py  utils.py  youtube.py
data/: signals.json
docs/: AI_PIPELINE.md  ALERTING_NOTIFICATION.md  CICD_IAC_STRATEGY.md  CLOUD_ARCHITECTURE.md  CONNECTOR_SDK_SPEC.md  DASHBOARD_UX_UI.md  DATA_EVENT_MODELS.md  DATA_LAKE.md  IMPLEMENTATION_ROADMAP.md  INGESTION_FRAMEWORK.md  INGESTION_PLATFORMS.md  MONITORING_OBSERVABILITY.md  NEXT_STEPS.md  PRD.md  REPOSITORY_STRUCTURE.md  SECURITY_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  TDD.md  TESTING_STRATEGY.md  UI_PLAN.md
frontend/: Dockerfile  README.md  index.html  package.json  tsconfig.node.json
infra/: README.md  ecs.tf  main.tf  variables.tf
ingest/: ecs_runner.py
pipeline/: compute_features.py  raw_to_bronze.py
scripts/: bootstrap_localstack.py  run_tests_loop.sh
tests/: test_alert_engine.py  test_api_integration.py  test_compute_features_moto.py  test_connector_runner.py  test_feature_store_moto.py  test_reddit_connector.py  test_s3_writer.py
(+54 files in other folders)
