[tool.poetry]
name = "praesagus"
version = "0.1.0"
description = "Praesagus market intelligence platform"
authors = ["Praesagus Team <dev@praesagus.example>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = ">=1.10"
boto3 = "*"
fastapi = "^0.95"
uvicorn = {version = "^0.22", extras = ["standard"]}
prometheus-client = "^0.16"
praw = "^7.10"
pyarrow = "^12.0"
pyyaml = "^6.0"
requests = "^2.31"
pytrends = "^4.11"
beautifulsoup4 = "^4.12"
httpx = "^0.27"
google-api-python-client = "^2.96"
feedparser = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
